First basic version of data scraping and server API implemented

--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,16 @@ pom.xml
 pom.xml.asc
 *.jar
 *.class
-/lib/
-/classes/
-/target/
-/checkouts/
-.lein-deps-sum
-.lein-repl-history
-.lein-plugins/
-.lein-failures
-.nrepl-port
+lib/
+classes/
+target/
+checkouts/
+*.nrepl-port
 .cpcache/
+profiles.clj
+.lein-*
+*.prepl-port
+*.xlsx
+.clj-kondo
+.lsp
+prev-scrape-time.txt
