--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -50,7 +50,7 @@ jobs:
       run: lein test
 
   deploy:
-    name: Deploy app
+    name: Build docker image
     runs-on: ubuntu-latest
     needs: lint-and-test
     # Only run on main branch, not on pull requests
@@ -68,5 +68,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
+          context: "{{defaultContext}}:alko-similar-server"
           push: true
           tags: essijukkala/alko-similar:server
