Build a jar instead of running app in container to reduce memory usage

--- a/alko-similar-server/Dockerfile
+++ b/alko-similar-server/Dockerfile
@@ -11,4 +11,6 @@ RUN lein deps
 # Add sources
 COPY . /app
 
-CMD lein run "resources/config.edn"
+RUN lein uberjar
+
+CMD java -jar target/alko-similar-server.jar "resources/config.edn"
