--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -49,7 +49,7 @@ jobs:
     - name: Run tests
       run: lein test
 
-  deploy:
+  build:
     name: Build docker image
     runs-on: ubuntu-latest
     needs: lint-and-test
@@ -72,3 +72,30 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: essijukkala/alko-similar:server
+  deploy:
+    name: Deploy docker image
+    runs-on: ubuntu-latest
+    needs: build
+    # Only run on main branch, not on pull requests
+    if: github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: 'Update docker-compose.yml'
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.INSTANCE_IP }}
+          username: ${{ secrets.INSTANCE_USERNAME }}
+          key: ${{ secrets.INSTANCE_PRIVATE_KEY }}
+          source: "docker-compose.yml"
+          target: "docker-compose.yml"
+      - name: 'Stop old server, pull new image, start server again'
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.INSTANCE_IP }}
+          username: ${{ secrets.INSTANCE_USERNAME }}
+          key: ${{ secrets.INSTANCE_PRIVATE_KEY }}
+          script: |
+            docker compose down
+            docker compose pull
+            docker compose up -d
