--- a/alko-similar-client/package.json
+++ b/alko-similar-client/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "highlight.js": "11.5.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "serve": "^14.2.0"
   },
   "devDependencies": {
     "shadow-cljs": "2.20.20",
