--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -101,7 +101,10 @@ jobs:
             docker compose up -d
   health-check:
     runs-on: ubuntu-latest
+    needs: deploy
     steps:
+    - name: Checkout
+      uses: actions/checkout@v3
     - name: Sleep for 30 seconds
       run: sleep 30s
       shell: bash
