--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -38,7 +38,7 @@ jobs:
   build:
     name: Build docker image
     runs-on: ubuntu-latest
-    needs: lint-and-test
+    needs: lint
     # Only run on main branch, not on pull requests
     if: github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
     steps:
