Change dockerfiles to use multi-stage builds for different platforms

--- a/alko-similar-server/Dockerfile
+++ b/alko-similar-server/Dockerfile
@@ -1,5 +1,5 @@
 # Base image that includes the Clojure CLI tools
-FROM clojure:lein
+FROM --platform=$BUILDPLATFORM clojure:lein AS builder
 
 RUN mkdir -p /app
 WORKDIR /app
@@ -11,4 +11,6 @@ RUN lein deps
 # Add sources
 COPY . /app
 
+FROM clojure:lein
+COPY --from=builder /app /app
 CMD lein run "resources/config.edn"
