--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -85,3 +85,23 @@ jobs:
             docker compose down
             docker compose pull
             docker compose up -d
+  health-check:
+    runs-on: ubuntu-latest
+    name: Health check
+    needs: deploy
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Sleep for 30 seconds
+      run: sleep 30s
+      shell: bash
+    - name: Health Check
+      if: github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
+      uses: jtalk/url-health-check-action@v3
+      with:
+        # Check the following URLs one by one sequentially
+        url: http://${{ secrets.INSTANCE_IP }}:3000/health
+        # Fail this action after this many failed attempts
+        max-attempts: 3 # Optional, defaults to 1
+        # Delay between retries
+        retry-delay: 10s # Optional, only applicable to max-attempts > 1
