--- a/alko-similar-client/package.json
+++ b/alko-similar-client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.16",
     "highlight.js": "11.5.1",
+    "rc-slider": "^10.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "serve": "^14.2.0"
