--- a/alko-similar-client/package.json
+++ b/alko-similar-client/package.json
@@ -14,6 +14,7 @@
     "rc-slider": "^10.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-zxing": "^1.1.3",
     "serve": "^14.2.0"
   },
   "devDependencies": {
