--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -100,7 +100,7 @@ jobs:
       uses: jtalk/url-health-check-action@v3
       with:
         # Check the following URLs one by one sequentially
-        url: http://${{ secrets.INSTANCE_IP }}:3000/health
+        url: https://${{ secrets.INSTANCE_IP }}/api/health
         # Fail this action after this many failed attempts
         max-attempts: 3 # Optional, defaults to 1
         # Delay between retries
