--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -90,6 +90,14 @@ jobs:
           key: ${{ secrets.INSTANCE_PRIVATE_KEY }}
           source: "docker-compose.yml"
           target: "~"
+      - name: 'Update nginx.conf'
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.INSTANCE_IP }}
+          username: ${{ secrets.INSTANCE_USERNAME }}
+          key: ${{ secrets.INSTANCE_PRIVATE_KEY }}
+          source: "nginx-conf/nginx.conf"
+          target: "~/nginx-conf"
       - name: 'Stop old server, pull new image, start server again'
         uses: appleboy/ssh-action@master
         with:
@@ -115,7 +123,7 @@ jobs:
       uses: jtalk/url-health-check-action@v3
       with:
         # Check the following URLs one by one sequentially
-        url: http://${{ secrets.INSTANCE_IP }}:3000/health
+        url: https://${{ secrets.INSTANCE_IP }}/api/health
         # Fail this action after this many failed attempts
         max-attempts: 3 # Optional, defaults to 1
         # Delay between retries
