--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,27 @@ version: '3.8'
 services:
   server:
     image: essijukkala/alko-similar:server
-    ports:
-      - 3000:3000
+    container_name: server
   client:
     image: essijukkala/alko-similar:client
+    container_name: client
+    depends_on: 
+      - server
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    depends_on: 
+      - client
     ports:
-      - 80:3001
+      - 80:80
+      - 443:443
+    volumes:
+      - ./nginx-conf/:/etc/nginx/conf.d/:ro
+      - ./certbot/www:/var/www/certbot/:ro
+      - ./certbot/conf/:/etc/nginx/ssl/:ro
+  certbot:
+    image: certbot/certbot:latest
+    container_name: certbot
+    volumes:
+      - ./certbot/www/:/var/www/certbot/:rw
+      - ./certbot/conf/:/etc/letsencrypt/:rw
