setup postgres for production

--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -73,6 +73,8 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: essijukkala/alko-similar:server
+          secrets: |
+            "jdbc_url=jdbc:postgresql://db:5432/${{ secrets.PG_DB }}?user=${{ secrets.PG_USER }}&password=${{ secrets.PG_PASSWORD }}"
   deploy:
     name: Deploy docker image
     runs-on: ubuntu-latest
@@ -100,10 +102,15 @@ jobs:
           target: "~/nginx-conf"
       - name: 'Stop old server, pull new image, start server again'
         uses: appleboy/ssh-action@master
+        env:
+          POSTGRES_USER=${{ secrets.PG_USER }}
+          POSTGRES_PASSWORD=${{ secrets.PG_PASSWORD }}
+          POSTGRES_DB=${{ secrets.PG_DB }}
         with:
           host: ${{ secrets.INSTANCE_IP }}
           username: ${{ secrets.INSTANCE_USERNAME }}
           key: ${{ secrets.INSTANCE_PRIVATE_KEY }}
+          envs: POSTGRES_USER,POSTGRES_PASSWORD,POSTGRES_DB
           script: |
             docker compose down
             docker compose pull
