--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,16 @@
 version: '3.8'
 
 services:
+  db:
+    image: postgres:15.2
+    container_name: db
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    volumes:
+      - ./alko-similar-db:/var/lib/postgresql/data
+      - ./alko-similar-server/resources/schema.sql:/docker-entrypoint-initdb.d/schema.sql
   server:
     image: essijukkala/alko-similar:server
     container_name: server
