Fix for malformed pipeline

--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -85,10 +85,15 @@ jobs:
           target: "~/nginx-conf"
       - name: 'Stop old server, pull new image, start again'
         uses: appleboy/ssh-action@master
+        env:
+          POSTGRES_USER: ${{ secrets.PG_USER }}
+          POSTGRES_PASSWORD: ${{ secrets.PG_PASSWORD }}
+          POSTGRES_DB: ${{ secrets.PG_DB }}
         with:
           host: ${{ secrets.INSTANCE_IP }}
           username: ${{ secrets.INSTANCE_USERNAME }}
           key: ${{ secrets.INSTANCE_PRIVATE_KEY }}
+          envs: POSTGRES_USER,POSTGRES_PASSWORD,POSTGRES_DB
           script: |
             docker compose down
             docker compose pull
