--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -112,6 +112,9 @@ jobs:
           key: ${{ secrets.INSTANCE_PRIVATE_KEY }}
           envs: POSTGRES_USER,POSTGRES_PASSWORD,POSTGRES_DB
           script: |
+            export POSTGRES_USER=$POSTGRES_USER
+            export POSTGRES_PASSWORD=$POSTGRES_PASSWORD
+            export POSTGRES_DB=$POSTGRES_DB 
             docker compose down
             docker compose pull
             docker compose up -d
