--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - POSTGRES_DB
     volumes:
       - ./alko-similar-db:/var/lib/postgresql/data
-      - ./schema.sql:/docker-entrypoint-initdb.d/schema.sql
+      - ./alko-similar-server/resources/schema.sql:/docker-entrypoint-initdb.d/schema.sql
   server:
     image: essijukkala/alko-similar:server
     container_name: server
