--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -59,7 +59,7 @@ jobs:
           push: true
           tags: essijukkala/alko-similar:client
   deploy:
-    name: Deploy docker image
+    name: Deploy docker images
     runs-on: ubuntu-latest
     needs: build
     # Only run on main branch, not on pull requests
