Update nginx conf

--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -1,4 +1,10 @@
 server {
+    listen 8888;
+
+    server_tokens off;
+}
+
+server {
     listen 80;
 
     server_name alko-similar.dy.fi www.alko-similar.dy.fi;
@@ -22,7 +28,7 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/alko-similar.dy.fi/privkey.pem;
 
     location /docs/ {
-	 proxy_pass http://server:3000/docs/;
+	proxy_pass http://server:3000/docs/;
     }
 
     location /api/ {
