--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -1,10 +1,10 @@
 server {
-    listen 8888;
+    listen 8989;
 
     server_tokens off;
 
     location / {
-	proxy_pass http://pihole;
+	proxy_pass http://pihole:8888;
     }
 }
 
