Try different port configuration

--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -1,14 +1,4 @@
 server {
-    listen 8989;
-
-    server_tokens off;
-
-    location / {
-	proxy_pass http://pihole:8888;
-    }
-}
-
-server {
     listen 80;
 
     server_name alko-similar.dy.fi www.alko-similar.dy.fi;
@@ -16,6 +6,10 @@ server {
 
     location /.well-known/acme-challenge/ {
 	root /var/www/certbot;
+    }
+
+    location /pihole/ {
+    proxy_pass http://pihole:8888/;
     }
 
     location / {
