Update nginx conf

--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -22,7 +22,7 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/alko-similar.dy.fi/privkey.pem;
 
     location /pihole/ {
-    proxy_pass http://pihole:8888/;
+    proxy_pass http://pihole/;
     }
 
     location /docs/ {
