--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,7 @@ services:
       - ./certbot/conf/:/etc/letsencrypt/:rw
   pihole:
     image: pihole/pihole:latest
+    container_name: pihole
     ports:
       - "53:53/tcp"
       - "53:53/udp"
