--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -22,18 +22,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
       # It is important to install java before installing clojure tools which needs java
       # exclusions: babashka, clj-kondo and cljstyle
     - name: Prepare java
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         distribution: 'zulu'
         java-version: '8'
 
     - name: Setup Clojure tools
-      uses: DeLaGuardo/setup-clojure@10.1
+      uses: DeLaGuardo/setup-clojure@12.5
       with:
           # Install just one or all simultaneously
           # The value must indicate a particular version of the tool, or use 'latest'
@@ -58,16 +58,16 @@ jobs:
     if: github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
     steps:
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+        uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
       - name: Login to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v6
         with:
           context: "{{defaultContext}}:alko-similar-server"
           platforms: linux/amd64,linux/arm64
@@ -81,7 +81,7 @@ jobs:
     if: github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: 'Update docker-compose.yml'
         uses: appleboy/scp-action@master
         with:
@@ -91,7 +91,7 @@ jobs:
           source: "docker-compose.yml"
           target: "~"
       - name: 'Update nginx.conf'
-        uses: appleboy/scp-action@master
+        uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.INSTANCE_IP }}
           username: ${{ secrets.INSTANCE_USERNAME }}
@@ -99,7 +99,7 @@ jobs:
           source: "nginx-conf/nginx.conf"
           target: "~/nginx-conf"
       - name: 'Update schema.sql'
-        uses: appleboy/scp-action@master
+        uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.INSTANCE_IP }}
           username: ${{ secrets.INSTANCE_USERNAME }}
@@ -107,7 +107,7 @@ jobs:
           source: "alko-similar-server/resources/schema.sql"
           target: "~"
       - name: 'Stop old server, pull new image, start server again'
-        uses: appleboy/ssh-action@master
+        uses: appleboy/ssh-action@v1
         env:
           POSTGRES_USER: ${{ secrets.PG_USER }}
           POSTGRES_PASSWORD: ${{ secrets.PG_PASSWORD }}
@@ -132,13 +132,13 @@ jobs:
     needs: deploy
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Sleep for 60 seconds
       run: sleep 60s
       shell: bash
     - name: Health Check
       if: github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
-      uses: jtalk/url-health-check-action@v3
+      uses: jtalk/url-health-check-action@v4
       with:
         # Check the following URLs one by one sequentially
         url: https://${{ secrets.INSTANCE_IP }}/api/health
